# parco

./: .gitignore  .pre-commit-config.yaml  README.md  generate_data.py  pyproject.toml  test.py  train.py
.github/workflows/: test.yaml
checkpoints/omdcpdp/: parco.ckpt
configs/: main.yaml
configs/env/: default.yaml  hcvrp.yaml  omdcpdp.yaml
configs/env/ffsp/: ffsp100.yaml  ffsp20.yaml  ffsp50.yaml
configs/experiment/: ffsp.yaml  hcvrp.yaml  omdcpdp.yaml
configs/ffsp/: config.yaml
configs/model/: mapdp.yaml  parco.yaml
data/omdcpdp/: seoul_n1000_m250.npz  seoul_n1000_m500.npz  seoul_n1000_n100.npz
examples/: 1.quickstart-hcvrp.ipynb  2.quickstart-omdcpdp.ipynb  3.quickstart-ffsp.ipynb
parco/data/: generate.py
parco/envs/: __init__.py
parco/envs/ffsp/: __init__.py  env.py  generator.py
parco/envs/hcvrp/: __init__.py  env.py  generator.py  render.py
parco/envs/omdcpdp/: env.py  generator.py  render.py
parco/models/: __init__.py  agent_handlers.py  augmentations.py  decoder.py  decoding_strategies.py  encoder.py  policy.py  rl.py  utils.py
parco/models/env_embeddings/: __init__.py  communication.py  ffsp.py  hcvrp.py  omdcpdp.py
parco/models/nn/: ham_encoder.py  matnet.py  positional_encoder.py  transformer.py
parco/tasks/: eval.py
parco/tasks/ffsp_old/: FFSProblemDef.py  README.md
parco/tasks/ffsp_old/FFSP_PARCO/: FFSPEnv.py  FFSPModel.py  FFSPModel_SUB.py  FFSPTrainer.py  HAMLayer.py  main.py  speed.py
parco/tasks/ffsp_old/utils/: utils.py
parco/utils/: heuristics.py  ops.py  plot.py
tests/: test.py
